[gd_scene load_steps=6 format=3 uid="uid://bsun1acv537r6"]

[ext_resource type="Script" uid="uid://bmmv33krkea8t" path="res://Enemies/minotaur.gd" id="1_0h8qe"]
[ext_resource type="Texture2D" uid="uid://cdyq0l23ku5rf" path="res://Assets/textures/enemies/images.jpg" id="2_0h8qe"]
[ext_resource type="AudioStream" uid="uid://bopwy22xhsmvn" path="res://Assets/sounds/monster.wav" id="3_e6aca"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0h8qe"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_0h8qe"]

[node name="Minotaur" type="CharacterBody3D" groups=["enemy_group"]]
script = ExtResource("1_0h8qe")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.475, 0, 0, 0, 1, 0, 0, 0)
texture = ExtResource("2_0h8qe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0h8qe")

[node name="sound_player" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_e6aca")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_0h8qe")

[node name="sound_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="sound_timer" to="." method="_on_sound_timer_timeout"]
